
// note i made all the field numbers different
// to catch protocol errors, i.e. if you're
// decoding a ServerToClient and you get a field type 6,
// then you're not actually decoding a ServerToClient,
// you're decoding a ClientToServer.

package PFK.Test;

// common messages first

enum ProtocolVersion {
  PROTOCOL_VERSION_1 = 1;
  PROTOCOL_VERSION_2 = 2;
  PROTOCOL_VERSION_3 = 3;
  // increment whenever you modify this file
}

message ProtoVersion {
  required string app_name = 11; // "LIBPROTOSSL_TEST"
  required int32 version = 1;    // PROTOCOL_VERSION
}

message PingInfo {
  required uint32 seq = 2;
  required uint32 time_seconds = 9;
  required uint32 time_useconds = 10;
}

// server to client

enum ServerToClientType {
  STC_PROTO_VERSION = 1;
  STC_PING_ACK = 2;
}

message ServerToClient {
  required ServerToClientType type = 3;
  optional ProtoVersion  proto_version = 4;
  optional PingInfo  ping = 5;
}

// client to server

enum ClientToServerType {
  CTS_PROTO_VERSION = 3;
  CTS_PING = 4;
}

message ClientToServer {
  required ClientToServerType type = 6;
  optional ProtoVersion  proto_version = 7;
  optional PingInfo  ping = 8;
}
